--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Contact SRG Motors in Limerick for quality auto repair services. Located at Unit H3 Eastway Business Park, Ballysimon Road, Limerick V94 AW89. Call us at 061 294 566.">
     
     <!-- Favicon -->
-    <link rel="icon" href="images/logo_srg.jpeg" type="image/jpeg">
+    <link rel="icon" href="logo_srg.jpeg" type="image/jpeg">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -105,7 +105,7 @@
             <div class="header-inner">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo_srg.jpeg" alt="SRG Motors Logo">
+                        <img src="logo_srg.jpeg" alt="SRG Motors Logo">
                         <h1>SRG <span>Motors</span></h1>
                     </a>
                 </div>
@@ -126,7 +126,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header" style="background-image: url('images/workshop5.jpg');">
+    <section class="page-header" style="background-image: url('service.jpg');">
         <div class="container">
             <div class="page-header-content">
                 <h1>Contact Us</h1>
