--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
     <meta name="description" content="SRG Motors offers a wide range of automotive services including full service, pre-NCT checks, and diesel injector testing and sales in Limerick.">
     
     <!-- Favicon -->
-    <link rel="icon" href="images/logo_srg.jpeg" type="image/jpeg">
+    <link rel="icon" href="logo_srg.jpeg" type="image/jpeg">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
             <div class="header-inner">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo_srg.jpeg" alt="SRG Motors Logo">
+                        <img src="logo_srg.jpeg" alt="SRG Motors Logo">
                         <h1>SRG <span>Motors</span></h1>
                     </a>
                 </div>
@@ -50,7 +50,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header" style="background-image: url('images/workshop3.jpg');">
+    <section class="page-header" style="background-image: url('service.jpg');">
         <div class="container">
             <div class="page-header-content">
                 <h1>Our Services</h1>
@@ -75,7 +75,7 @@
                     <p>All our work is backed by our satisfaction guarantee, giving you peace of mind that your vehicle is in good hands.</p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/workshop4.jpg" alt="SRG Motors Workshop" class="img-fluid rounded shadow">
+                    <img src="service2.jpg" alt="SRG Motors Workshop" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                 <div class="col-lg-4 mb-4">
                     <div class="service-detail-card bg-white rounded shadow h-100">
                         <div class="service-detail-img">
-                            <img src="images/workshop1.jpg" alt="Full Service" class="img-fluid">
+                            <img src="service.jpg" alt="Full Service" class="img-fluid">
                         </div>
                         <div class="service-detail-content p-4">
                             <h3>Full Service</h3>
@@ -120,7 +120,7 @@
                 <div class="col-lg-4 mb-4">
                     <div class="service-detail-card bg-white rounded shadow h-100">
                         <div class="service-detail-img">
-                            <img src="images/workshop2.jpg" alt="Pre-NCT Check" class="img-fluid">
+                            <img src="service2.jpg" alt="Pre-NCT Check" class="img-fluid">
                         </div>
                         <div class="service-detail-content p-4">
                             <h3>Pre-NCT Check</h3>
@@ -146,7 +146,7 @@
                 <div class="col-lg-4 mb-4">
                     <div class="service-detail-card bg-white rounded shadow h-100">
                         <div class="service-detail-img">
-                            <img src="images/workshop5.jpg" alt="Diesel Injector Testing" class="img-fluid">
+                            <img src="dsgOil_service.jpg" alt="Diesel Injector Testing" class="img-fluid">
                         </div>
                         <div class="service-detail-content p-4">
                             <h3>Diesel Injector Testing & Sales</h3>
@@ -328,7 +328,7 @@
     </section>
 
     <!-- Call to Action -->
-    <section class="section cta" style="background-image: url('images/workshop1.jpg');">
+    <section class="section cta" style="background-image: url('service.jpg');">
         <div class="container">
             <div class="cta-content text-center">
                 <h2>Ready to Book a Service?</h2>
